--- a/manifest.json
+++ b/manifest.json
@@ -394,9 +394,20 @@
 					"css/mui.css",
 					"images/tabbar/tabbar-sl-4.png",
 					"images/school/head-pic.png",
-					"school/courseAll.html"
+					"school/courseAll.html",
+					"school/scShowAll.html",
+					"images/school/tc_01.png",
+					"images/school/tc_02.png",
+					"js/app.js",
+					"js/vue.min.js",
+					"images/tabbar/tabbar-ns-1.png"
 				],
-				"refer": [],
+				"refer": [
+					"school/setTeacherfo.html",
+					"school/setStudentInfo.html",
+					"school/timeline.html",
+					"school/myHonor.html"
+				],
 				"priority": 0
 			},
 			"school/courseDir.html": {
@@ -463,7 +474,10 @@
 					"school/courseAll.html",
 					"js/app.js",
 					"css/icons-extra.css",
-					"school/scShowAll.html"
+					"school/scShowAll.html",
+					"school/personalCenter.html",
+					"images/tabbar/tabbar-sl-4.png",
+					"images/tabbar/tabbar-sl-3.png"
 				],
 				"refer": [
 					"school/activityReply.html",
@@ -528,6 +542,57 @@
 					"images/school/head-pic.png",
 					"css/school/everyoneWorks.css",
 					"css/mui.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"school/setStudentInfo.html": {
+				"resources": [
+					"js/mui.picker.js",
+					"css/school/setMsgInfo.css",
+					"css/app.css",
+					"js/mui.poppicker.js",
+					"css/dashboard.css",
+					"images/school/head-pic.png",
+					"css/mui.poppicker.css",
+					"css/mui.picker.min.css",
+					"js/jquery-2.1.4.min.js",
+					"js/mui.min.js",
+					"css/mui.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"school/timeline.html": {
+				"resources": [
+					"css/school/timeline.css",
+					"images/school/timeline-dz.png",
+					"images/school/timeline.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"school/myHonor.html": {
+				"resources": [
+					"images/school/silver-medal.png",
+					"images/school/gold-medal.png",
+					"css/school/myHonor.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"school/setTeacherfo.html": {
+				"resources": [
+					"js/mui.picker.js",
+					"css/school/setMsgInfo.css",
+					"css/app.css",
+					"js/mui.min.js",
+					"js/mui.poppicker.js",
+					"css/dashboard.css",
+					"css/mui.poppicker.css",
+					"css/mui.picker.min.css",
+					"css/mui.css",
+					"js/jquery-2.1.4.min.js"
 				],
 				"refer": [],
 				"priority": 0
