完善附件上传逻辑，实现课程“学习体会”、“活动申请”“活动集锦”“我的作品”界面的附件上传。

--- a/manifest.json
+++ b/manifest.json
@@ -698,7 +698,9 @@
 					"js/immersed.js",
 					"js/common.js",
 					"js/app.js",
-					"js/vue.min.js"
+					"js/vue.min.js",
+					"images/astop.png",
+					"images/arecord.png"
 				],
 				"refer": [
 					"school/showImage.html",
@@ -722,7 +724,8 @@
 					"js/vue.min.js",
 					"js/immersed.js",
 					"images/astop.png",
-					"images/arecord.png"
+					"images/arecord.png",
+					"css/H5MediaFile.css"
 				],
 				"refer": [
 					"school/showImage.html"
