--- a/manifest.json
+++ b/manifest.json
@@ -940,7 +940,8 @@
 					"images/tabbar/tabbar-sl-3.png",
 					"images/tabbar/tabbar-sl-4.png",
 					"js/mui.min.js",
-					"login.html"
+					"login.html",
+					"css/mui.css"
 				],
 				"refer": [
 					"school/personalCenter.html",
