--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ unpackage/
 .confirmed_dependencies
 /._manifest.json5680177373087986436.tmp
 /.gitignore
+school/scShowAll.html
+
+unpackage/.confirmed_dependencies
+
+unpackage/.confirmed_dependencies
